# curves-revolution-surface-demo

./: .clang-format  CMakeLists.txt  CMakeSettings.json  readme.md  todo.md
include/: camera.h  curve.h  helpers.h  hit.h  image.h  main.h  matrix.h  perlin.h  ray.h  shading.h  sphere.h  subdivision.h  transform.h  units.h  vec.h
shaders/: flat.frag.glsl  flat.vert.glsl  phong.frag.glsl  phong.vert.glsl
src/: camera.cpp  curve.cpp  helpers.cpp  hit.cpp  image.cpp  main.cpp  matrix.cpp  ray.cpp  shading.cpp  sphere.cpp  subdivision.cpp  transform.cpp  units.cpp  vec.cpp
